#118: Fix filter menu not showing because of tabs

--- a/src/pages/diary/diary.scss
+++ b/src/pages/diary/diary.scss
@@ -12,7 +12,7 @@ page-diary {
     padding: 5px 8px;
   }
 
-  #addButton {
+  #addButtonDiary {
     bottom: 55px;
   }
 }
