--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -49,7 +49,7 @@ page-portfolio {
     margin-left: 7px;
   }
 
-  #addButton {
+  #addButtonPortfolio {
     bottom: 55px;
   }
 }
